2003-11-30  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/text.c (text_draw): Use new renderer function to draw the
	text.

	* lib/diarenderer.h: 
	* lib/diarenderer.c: New renderer function "draw_text" with
	default implementation.  This function should eventually be the
	main interface, as it will be able to handle width and caching of
	rendering internally.  All users of draw_string should convert to
	use Text objects and call either renderer->draw_text or text_draw,
	the latter if the text can be edited in-place (as should be the
	goal, eventually).

2003-11-29  Lars Clausen  <lrclause@cs.uiuc.edu>

	* shapes/Circuit/hresistor.shape: First example of extra
	attributes. 

2003-11-28  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/shape/shape-export.c: 
	* lib/diasvgrenderer.h: 
	* lib/diasvgrenderer.c: 
	* plug-ins/svg/render_svg.c (new_svg_renderer): 
	Actually store the font size, using DiaRenderer's font fields.

2003-11-27  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/custom/shape_info.[ch]: 
	* objects/custom/custom_object.[ch]: 
	Support for extra attributes in custom objects.
	
2003-11-23  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diagram.c (diagram_update_menu_sensitivity): More
	intelligent checks for menu sensitivity.  Might be slow on huge
	diagrams, but I think other things outweigh it by a lot.

	* app/menus.[ch]: Make "Bring Forwards"
	and "Send Backwards" updateable.

2003-11-22  Steffen Macke <sdteffen@web.de>

	* shapes/Assorted/arrow-turn-up.shape:
	* shapes/Assorted/arrow-turn-up.png:
	* sheets/Assorted/Makefile.am:
	* sheets/Assorted.sheet.in: Added new arrow

2003-11-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/app_procs.c
	* app/color_area.c
	* app/commands.c
	* app/defaults.c
	* app/dia_embedd.c
	* app/diagram.c
	* app/diagram_tree.c
	* app/diagram_tree_menu.c
	* app/diagram_tree_window.c
	* app/diapagelayout.c
	* app/diaunitspinner.c
	* app/export_png.c
	* app/filedlg.c
	* app/interface.c
	* app/layer_dialog.c