@@ -14,7 +14,7 @@
 #define GETTEXT_PACKAGE "dia"
 #define LOCALEDIR "../lib/locale"
 
-#define VERSION "0.92.2"
+#define VERSION "0.92.2+cvs"
 
 /*
  * We are linking libxml as DLL with either msvc or mingw, but this
